--- a/src/pymodule/meson.build
+++ b/src/pymodule/meson.build
@@ -43,7 +43,8 @@ py_tools = pymod.extension_module(
     cpp_args: ['-DMODULE_NAME='+module_name, '-DMODULE_VERSION=' + '"' + meson.project_version() + '"'],
     install: true,
     subdir: projectnamespace,
-    install_tag: 'python-runtime'
+    install_tag: 'python-runtime',
+    override_options: ['unity=off']
 )
 
 
