refractoring helper.hpp

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -66,19 +66,24 @@ headers = [
   'progressbars/.docstrings/progressbarchooser.doc.hpp',
   'progressbars/.docstrings/progressindicator.doc.hpp',
   'progressbars/.docstrings/progresstqdm.doc.hpp',
+  'helper/approx.hpp',
   'helper/defaultmap.hpp',
   'helper/defaultsharedpointermap.hpp',
   'helper/enum.hpp',
+  'helper/floatcompare.hpp',
   'helper/isviewstream.hpp',
   'helper/omp_helper.hpp',
   'helper/printing.hpp',
+  'helper/stringconversion.hpp',
   'helper/xtensor.hpp',
+  'helper/.docstrings/approx.doc.hpp',
   'helper/.docstrings/defaultmap.doc.hpp',
   'helper/.docstrings/defaultsharedpointermap.doc.hpp',
   'helper/.docstrings/enum.doc.hpp',
   'helper/.docstrings/isviewstream.doc.hpp',
   'helper/.docstrings/omp_helper.doc.hpp',
   'helper/.docstrings/printing.doc.hpp',
+  'helper/.docstrings/stringconversion.doc.hpp',
   'helper/.docstrings/xtensor.doc.hpp',
 ]
 
