refractoring tools::helper

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -13,7 +13,6 @@ sources = [
 
 headers = [
   'hashhelper.hpp',
-  'helper.hpp',
   'progressbars.hpp',
   'timeconv.hpp',
   'vectorinterpolators.hpp',
@@ -71,19 +70,26 @@ headers = [
   'helper/defaultsharedpointermap.hpp',
   'helper/enum.hpp',
   'helper/floatcompare.hpp',
+  'helper/integermath.hpp',
   'helper/isviewstream.hpp',
+  'helper/map_tools.hpp',
   'helper/omp_helper.hpp',
   'helper/printing.hpp',
   'helper/stringconversion.hpp',
+  'helper/variant.hpp',
   'helper/xtensor.hpp',
   'helper/.docstrings/approx.doc.hpp',
   'helper/.docstrings/defaultmap.doc.hpp',
   'helper/.docstrings/defaultsharedpointermap.doc.hpp',
   'helper/.docstrings/enum.doc.hpp',
+  'helper/.docstrings/floatcompare.doc.hpp',
+  'helper/.docstrings/integermath.doc.hpp',
   'helper/.docstrings/isviewstream.doc.hpp',
+  'helper/.docstrings/map_tools.doc.hpp',
   'helper/.docstrings/omp_helper.doc.hpp',
   'helper/.docstrings/printing.doc.hpp',
   'helper/.docstrings/stringconversion.doc.hpp',
+  'helper/.docstrings/variant.doc.hpp',
   'helper/.docstrings/xtensor.doc.hpp',
 ]
 
