--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -22,7 +22,7 @@ on:
         default: true
 
 jobs:
-  copilot-setup-steps.yml:
+  copilot-setup-steps:
     runs-on: ubuntu-latest
     
     steps:
