--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -128,8 +128,8 @@ jobs:
         #rm -rv boost*
 
     - name: install dependencies (meson & python)
-      run: pip install meson meson-python pytest numpy 
-      #run: pip install meson meson-python pytest numpy ninja
+      run: pip install meson==1.8.4 meson-python pytest numpy 
+      #run: pip install meson==1.8.4 meson-python pytest numpy ninja
 
     - name: download ninja long path
       run : |
