--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -90,7 +90,7 @@ jobs:
         
     - run: brew install libomp boost coreutils llvm@18
     
-    - run: pip ipip install meson meson-python ninja pytest numpy
+    - run: pip install meson meson-python ninja pytest numpy
     
     - name: configure meson
       run: |
