--- a/src/meson.build
+++ b/src/meson.build
@@ -12,6 +12,7 @@ subdir('themachinethatgoesping')
 if get_option('build_pythonmodule').enabled()
     #put module folders here
     subdir('pymodule')
+    subdir('nanomodule')
 endif
 
 # -- tests (catch2) --
