--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -62,6 +62,7 @@ headers = [
   'progressbars/progressbarchooser.hpp',
   'progressbars/progressindicator.hpp',
   'progressbars/progresstqdm.hpp',
+  'progressbars/progresstqdm_nano.hpp',
   'progressbars/.docstrings/consoleprogressbar.doc.hpp',
   'progressbars/.docstrings/i_progressbar.doc.hpp',
   'progressbars/.docstrings/i_progressbartimed.doc.hpp',
@@ -69,6 +70,7 @@ headers = [
   'progressbars/.docstrings/progressbarchooser.doc.hpp',
   'progressbars/.docstrings/progressindicator.doc.hpp',
   'progressbars/.docstrings/progresstqdm.doc.hpp',
+  'progressbars/.docstrings/progresstqdm_nano.doc.hpp',
   'helper/approx.hpp',
   'helper/defaultmap.hpp',
   'helper/defaultsharedpointermap.hpp',
