--- a/.github/workflows/ci-mac.yml
+++ b/.github/workflows/ci-mac.yml
@@ -94,7 +94,8 @@ jobs:
     
     - name: configure meson
       run: |
-        meson setup builddir -Dunity=on -Dunity_size=9999999 -Dpython.install_env=auto
+        # meson setup builddir -Dunity=on -Dunity_size=9999999 -Dpython.install_env=auto
+        meson setup builddir -Dpython.install_env=auto
         # CXX=${{ matrix.llvm }}/bin/clang++ CC=${{ matrix.llvm }}/bin/clang \
         # LDFLAGS="-L${{ matrix.llvm }}/lib \
         #          -L${{ matrix.llvm }}/lib/c++ \
