implemented options class as convinient wrapper for enums created nanobind version of tools

--- a/src/tests/meson.build
+++ b/src/tests/meson.build
@@ -9,6 +9,7 @@ testcomponent = 'tools'
 sources = [
   'timeconv.test.cpp',
   'tutorial.test.cpp',
+  'classhelper/option.test.cpp',
   'vectorinterpolators/akima.test.cpp',
   'vectorinterpolators/bivector.test.cpp',
   'vectorinterpolators/common.test.cpp',
