--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -11,6 +11,7 @@ sources = [
   'timeconv.cpp',
   'classhelper/classversion.cpp',
   'classhelper/objectprinter.cpp',
+  'vectorinterpolators/i_interpolator.cpp',
   'vectorinterpolators/vectorinterpolators.cpp',
   'rotationfunctions/helper.cpp',
   'rotationfunctions/quaternions.cpp',
@@ -28,10 +29,12 @@ headers = [
   'exceptions/.docstrings/version_error.doc.hpp',
   'classhelper/classversion.hpp',
   'classhelper/objectprinter.hpp',
+  'classhelper/option.hpp',
   'classhelper/stream.hpp',
   'classhelper/xxhashhelper.hpp',
   'classhelper/.docstrings/classversion.doc.hpp',
   'classhelper/.docstrings/objectprinter.doc.hpp',
+  'classhelper/.docstrings/option.doc.hpp',
   'classhelper/.docstrings/stream.doc.hpp',
   'classhelper/.docstrings/xxhashhelper.doc.hpp',
   'vectorinterpolators/akimainterpolator.hpp',
