precompiled headers and extra option for extrapolation_mode

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,7 +11,7 @@ subdir('themachinethatgoesping')
 # -- python modules --
 if get_option('build_pythonmodule').enabled()
     #put module folders here
-    subdir('pymodule')
+    #subdir('pymodule')
     subdir('nanomodule')
 endif
 
