glob missing headers

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -30,11 +30,13 @@ headers = [
   'classhelper/classversion.hpp',
   'classhelper/objectprinter.hpp',
   'classhelper/option.hpp',
+  'classhelper/option_frozen.hpp',
   'classhelper/stream.hpp',
   'classhelper/xxhashhelper.hpp',
   'classhelper/.docstrings/classversion.doc.hpp',
   'classhelper/.docstrings/objectprinter.doc.hpp',
   'classhelper/.docstrings/option.doc.hpp',
+  'classhelper/.docstrings/option_frozen.doc.hpp',
   'classhelper/.docstrings/stream.doc.hpp',
   'classhelper/.docstrings/xxhashhelper.doc.hpp',
   'vectorinterpolators/akimainterpolator.hpp',
