--- a/subprojects/packagefiles/hinnant-date/meson.build
+++ b/subprojects/packagefiles/hinnant-date/meson.build
@@ -5,6 +5,7 @@
 
 project('hinnant-date', ['cpp'],
         default_options: ['cpp_std=c++20'],
+        version: '3.0.4',
         license: 'MIT')
 
 pkg = import('pkgconfig')
