Revert "Auxiliary commit to revert individual files from a7109a975e9318eda58d0eb9fd2ce59cbedff3c2"
This reverts commit cbf4b0663952c0aba9862cb8f34ab6930a3e93f1.

# Conflicts:
#	meson.build

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -112,7 +112,7 @@ if build_machine.system() != 'linux'
                           boost_dep, 
                           eigen3_dep, 
                           omp_dep,
-                          #hinnant_date_dep,
+                          hinnant_date_dep,
                           fmt_dep,
                           indicators_dep,
                           magic_enum_dep,
@@ -132,7 +132,7 @@ else
                           boost_dep, 
                           eigen3_dep, 
                           omp_dep,
-                          #hinnant_date_dep,
+                          hinnant_date_dep,
                           fmt_dep,
                           indicators_dep,
                           magic_enum_dep,
@@ -155,7 +155,7 @@ tools_dep = declare_dependency(
     boost_dep,
     eigen3_dep,
     omp_dep,
-    #hinnant_date_dep,
+    hinnant_date_dep,
     fmt_dep,
     indicators_dep,
     magic_enum_dep,
