--- a/subprojects/packagefiles/xtensor/meson.build
+++ b/subprojects/packagefiles/xtensor/meson.build
@@ -1,5 +1,5 @@
 project('xtensor', 'cpp',
-        version:'0.27.1',
+        version:'0.27.1.themachinethatgoesping',
         license:'BSD-3-Clause',
         default_options : ['warning_level=0', 'cpp_std=c++14'])
 
@@ -9,7 +9,6 @@ xtl_dep = dependency('xtl',
 json_dep = dependency('nlohmann_json',
     version:'>=3.1.1')
 
-#TODO: currently build error when using xsimd ...
 xsimd_dep = dependency('xsimd',
     #required: get_option('xsimd'),
     required: true,
