added missing files

--- a/src/themachinethatgoesping/tools/meson.build
+++ b/src/themachinethatgoesping/tools/meson.build
@@ -88,6 +88,7 @@ headers = [
   'helper/isviewstream.hpp',
   'helper/map_tools.hpp',
   'helper/omp_helper.hpp',
+  'helper/osstream.hpp',
   'helper/printing.hpp',
   'helper/stringconversion.hpp',
   'helper/variant.hpp',
@@ -103,6 +104,7 @@ headers = [
   'helper/.docstrings/isviewstream.doc.hpp',
   'helper/.docstrings/map_tools.doc.hpp',
   'helper/.docstrings/omp_helper.doc.hpp',
+  'helper/.docstrings/osstream.doc.hpp',
   'helper/.docstrings/printing.doc.hpp',
   'helper/.docstrings/stringconversion.doc.hpp',
   'helper/.docstrings/variant.doc.hpp',
